[package]
name = "intro-to-axum"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/timClicks/tutorials"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
serde_json = "1"
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
