[package]
name = "porter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "0.2.2"
clap = { version = "4.5.4", features = ["derive", "wrap_help", "unicode"] }
tokio = { version = "1.37.0", features = ["time", "rt-multi-thread", "full"] }
